# fibocom_vts

./: .gitignore  CMakeLists.txt  Kconfig  MC66x_16009_openSDK_releasenotes.xlsx  build.bat  opencpu.sh
components/apploader/: CMakeLists.txt
components/apploader/pack/: core_filelist.xml  core_filelist_8850_firmware.xml
components/apploader/pack/fibo_opencpu_demo/: oc_audio_demo.c  oc_dm_demo.c  oc_encode_demo.c  oc_esim_demo.c  oc_fota_v2_demo.c  oc_keypad_demo.c  oc_pdp_demo.c  oc_sdc_demo.c  oc_sim_demo.c  oc_sim_esim_apdu_send_demo.c  oc_sms_demo.c  oc_sms_send_rev_demo.c  oc_tts_demo.c
components/apploader/src/: app_loader.c  core_export.list
components/appstart/: CMakeLists.txt
components/atr/: Kconfig
components/atr/include/: at_cfg.h  at_engine.h  atr_config.h.in
components/atr/src/: at_cmd_table.gperf  at_setting.proto  at_setting_codec.c
components/ats/: CMakeLists.txt
components/ats/apn/: Kconfig  csv_parse.py  global_apn.csv
components/ats/ids/: Kconfig
components/ats/include/: at_cfw.h  at_cmd_audio.h  at_cmd_nw.h  at_cmd_sms.h  ats_config.h.in
components/ats/misc/: at_cmd_sysnv.c
components/ats/nw/: Kconfig
components/audio/: CMakeLists.txt
components/audio/include/: audio_device.h  audio_types.h
components/audio/src/8910/: rpc_aud_api.h
components/bootloader/: CMakeLists.txt  img.cmake
components/bootloader/8850/: fdl.c  spl2_start.c  spl_start.c
components/bootloader/8910/: boot2_start.c  boot_platform.c  boot_secure.c  boot_start.c  fdl1.c  fdl2.c
components/bootloader/fibo_boot_config/src/: fibo_boot_cfg.c
components/bt_app/: CMakeLists.txt  Kconfig  bt_app.cmake
components/bt_app/bt_bsp/driver/: bt_drv.h  bt_hci_dev.h
components/bt_app/bt_bsp/hci_trace/: bt_hci_tra.h
components/bt_app/example/ble_client/: bt_gatt_client_demo.h
components/bt_app/example/ble_server/: bt_gatt_server_demo.h
components/bt_app/example/bt_ftp/: app_ftp.h
components/bt_app/example/bt_headset/: app_headset.h
components/bt_app/example/bt_opp/: app_opp.h
components/bt_app/include/: a2dp_api.h  bt_abs.h  bt_app.h  bt_app_config.h.in  bt_cfg.h  cos.h  cos_event.h  sci_types.h
components/cfw/: core.cmake
components/cfw/include/: cfw.h  cfw_cc.h  cfw_event.h  cfw_sim_new.h  cfw_sms.h  cfw_utility.h
components/chip/: Kconfig  chip_8850.cmake  chip_8910.cmake
components/connectivity/include/: connectivity_config.h.in
components/driver/: CMakeLists.txt  Kconfig  core.cmake
components/driver/include/: drv_camera.h  drv_charger.h  drv_config.h.in  drv_emmc.h  drv_gpio.h  drv_hid.h  drv_i2c.h  drv_lcd.h  drv_lcd_defs.h  drv_md_ipc.h  drv_names.h  drv_spi.h  drv_spi_flash.h  drv_spi_nand.h  drv_uac.h  drv_usb.h  drv_wdt.h  image_sensor.h
components/driver/src/: drv_camera.c  drv_lcd.c  drv_lcd_cfg.c
components/fibo_logo/: CMakeLists.txt
components/fibo_logo/prepack_logo/: prepack.json
components/firmwareupdate/: Kconfig
components/firmwareupdate/include/: fupdate_config.h.in
components/fs/: Kconfig
components/fs/include/: fs_config.h.in  lfs_vfs.h  vfs.h
components/gnss/include/: priority_system.h
components/hal/: CMakeLists.txt  Kconfig
components/hal/include/: hal_config.h.in  hal_spi_flash.h  hal_spi_flash_defs.h
components/hal/src/: hal_spi_flash_prop.csv
components/kernel/: CMakeLists.txt  Kconfig
components/kernel/include/: kernel_config.h.in  osi_api.h  osi_log_imp.h  osi_mem.h  osi_section.h  osi_sysnv.h
components/lcdpanel/src/: panel_gc9305.c  panel_gc9306.c  panel_st7789h2.c
components/mal/include/: mal_api.h
components/modem_lte/include/: itf_api.h  tgl.hec  tgl.het
components/net/: CMakeLists.txt  Kconfig
components/net/include/: net_config.h.in  netif_wifi_gateway.h  ppp_interface.h
components/net/ip4nat_fibo_backup/: CMakeLists.txt  core.cmake
components/net/lwip/: CMakeLists.txt
components/net/self_registration/: dm_module_lwm2m.c  vnetIot.c
components/net/src/: cfw_sockets_api.c  lwip_data_event.c  nd6_reply.c  netdev_interface.c  netdev_interface_nat_lan.c  netif_gprs.c  netif_nat_lan_lwip.c  netif_nat_wan.c  netif_psm.c  netif_wifi_gateway.c  netmain.c  ppp_interface.c
components/pam/include/: pam_worker.h
components/rpc/: core.cmake
components/rpc/include/: rpc_features.h
components/tts/: core.cmake
cust_app/: CMAKE_OLD.TXT  CMakeLists.txt
cust_app/Project/: CODE_EXAMPLES.md  INDEX.md  INTEGRATION_SUMMARY.md  LOGGING_GUIDE.md  QUICK_REFERENCE.md  QUICK_REFERENCE_SMS.md  README_LOGGING.md  main.c
cust_app/Project/common/: log.h
cust_app/Project/service/: gps.c  network_service.c  sim.c  sms.c  tcp.c
cust_app/Project/service/inc/: gps.h  sim.h  sms.h  tcp.h
cust_app/include/: app_image.h  fibo_old_api.h
cust_app/src/: app_at_cmd.c  app_image.c  app_image_demo_test.c  fibo_config.c  fibo_logo_config.c  fibo_old_api.c  fibo_vendor_config.c  flash_partinfo.c
cust_app/uartdebug/debug/include/: uartdebug.h
cust_app/uartdebug/debug/src/: uartdebug.c
fibocom/: Kconfig  fibocom.cmake
fibocom/api/: fibo_common.h  fibo_opencpu_comm.h  oc_ble.h  oc_fota.h  oc_ftp.h  oc_gprs.h  oc_mqtt_cloud.h  oc_ssl.h  oc_uart.h  oc_ws.h  verno.h
fibocom/fibo-framework/ffw_ftp/: ffw_ftpc.h
fibocom/fibo-framework/ffw_lbs/: ffw_lbs.h
fibocom/fibo-framework/ffw_mqtt/: ffw_mqttc.h
fibocom/fibo-framework/ffw_reg/: ffw_reg.h
fibocom/fibo-framework/ffw_tls/: ffw_network_tls.h  ffw_tls_api.h
fibocom/fibo_demo/: oc_cell_demo.c  oc_fota_demo.c  oc_ftp_demo.c  oc_lcd_demo_v2.c  oc_mqtt_demo.c  oc_nw_demo.c  oc_phone_number_demo.c  oc_socket_demo.c  oc_spi_demo.c  oc_tts_pcm_demo.c  oc_uart_send_and_recv_demo.c  oc_websocket_demo.c
fibocom/fibo_demo/app_demo/: app.c  app_pdp.h
fibocom/include/: fibocom.h.in
fibocom/opencpu/: fibo_opencpu.h  oc_fota_v2.h  oc_nw.h  oc_sdc.h  oc_sms.h  oc_sxdb_module.h
tools/: build_all_target_sdk.sh  codesize.py  copy_project.sh  deliverpack.py  getcpentry.py  launch.sh  modemgen.py
tools/linux/: dtools
tools/linux/Fibocom_Linux_MakeDiff_Tool/: ModifyRecord.txt  compress_tool_script.sh
tools/win32/doc/: dtools_usage.md
(+334 files in other folders)
